<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="2dp"
    android:paddingStart="2dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kseniyaturava.mytest.RegisterActivity">

    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/registerForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                android:theme="@style/ColorHint">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                android:theme="@style/ColorHint">

                <EditText
                    android:id="@+id/user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user"
                    android:inputType="text"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:maxLength="15"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                android:theme="@style/ColorHint">

                <EditText
                    android:id="@+id/nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre"
                    android:inputType="text"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:maxLength="25"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                android:theme="@style/ColorHint">

                <EditText
                    android:id="@+id/edad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edad"
                    android:inputType="number"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:maxLength="2"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                android:theme="@style/ColorHint">

                <EditText
                    android:id="@+id/ciudad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ciudad"
                    android:inputType="text"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                android:theme="@style/ColorHint">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:maxLength="10"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/registerShort"
                android:background="@android:color/holo_red_light"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
