...
    <string name="mensaje">Mensaje...</string>
    <string name="icon_sendMessage">icon_sendMessage</string>
    <string name="icon_addfile">icon_addFile</string>
    <string name="icon_reply">icon_reply</string>
    <string name="icon_reply0">icon_reply0</string>
    <string name="icon_comment2">icondfdsf</string>
    <string name="register">Register New Account</string>
    <string name="registerShort">Register</string>
    <string name="user">User</string>
    <string name="nombre">Nombre</string>
    <string name="edad">Edad</string>
    <string name="ciudad">Ciudad</string>
    <string name="interactua">Interactúa</string>
    <string name="descubreForos">Descubre los foros que más gustan</string>
...
